Correções do POM para compilar em java 11