@@ -186,10 +186,9 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.0</version>
                     <configuration>
-                        <source>1.6</source>
-                        <target>1.6</target>
-                        <encoding>UTF-8</encoding>
+                        <release>11</release>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -203,13 +202,7 @@
                                 <goal>jar</goal>
                             </goals>
                             <configuration>
-                                <links>
-                                    <link>
-                                        http://java.sun.com/j2se/1.5/docs/api
-                                    </link>
-                                </links>
                                 <encoding>utf-8</encoding>
-                                <charset>utf-8</charset>
                             </configuration>
                         </execution>
                     </executions>
@@ -235,7 +228,9 @@
                         <printSummary>true</printSummary>
                         <useFile>true</useFile>
                         <skip>true</skip>
-                        <argLine>-Duser.language=pt -Duser.country=BR</argLine>
+                        <argLine>
+                            -Duser.language=pt -Duser.country=BR --illegal-access=permit
+                        </argLine>
                         <systemProperties>
                             <property>
                                 <name>java.awt.headless</name>
@@ -265,29 +260,21 @@
         </pluginManagement>
 
         <plugins>
-            <!-- Setting eclipse code format options -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.8</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.5</version>
                 <configuration>
-                    <additionalConfig>
-                        <file>
-                            <name>.settings/org.eclipse.core.resources.prefs</name>
-                            <content><![CDATA[eclipse.preferences.version=1${line.separator}encoding/<project>=UTF-8${line.separator}]]></content>
-                        </file>
-                    </additionalConfig>
-                    <workspace>${basedir}</workspace>
-                    <workspaceCodeStylesURL>
-                        http://svn.apache.org/repos/asf/maven/plugins/trunk/maven-eclipse-plugin/src/optional/eclipse-config/maven-styles.xml
-                    </workspaceCodeStylesURL>
+                    <generateBackupPoms>false</generateBackupPoms>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -296,7 +283,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
+                <version>3.0.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -376,7 +363,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
+                <version>3.0.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
